gccida/c0/output_832
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_832/src/insn-output.c:4744:8: error: use of undeclared identifier 'output_832_patterns'
return output_832_patterns[locality]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_832/src/obj/insn-output.o] Error 1
